--- a/src/main/webapp/pages/paciente/test.xhtml
+++ b/src/main/webapp/pages/paciente/test.xhtml
@@ -22,7 +22,7 @@
             <h:form id="form" >
                 <div class="admin">
                     <p:commandButton id="save" action="#{testWebService.cargar()}" value="#{messages['common.save']}" styleClass="btn primary" >
-                        <f:ajax event="change" execute="@this" render="result" />
+                        
                     </p:commandButton>                    
                 </div>
 
@@ -32,7 +32,7 @@
                     <label for="fdni">#{messages['profile.dni']}</label>
                     <div class="input" >
                         <h:inputText id="dni" value="#{testWebService.cedula}" styleClass="xLarge" required="true" label="#{messages['profile.dni']}">
-                            <f:validator validatorId="ciValidator" />                            
+                            <!--<f:validator validatorId="ciValidator" />-->
                             <f:ajax execute="@this" render="dnip"  />
                         </h:inputText>
                         <br/> 
