--- a/src/main/webapp/pages/secretaria/paciente.xhtml
+++ b/src/main/webapp/pages/secretaria/paciente.xhtml
@@ -263,7 +263,7 @@
                 <div class="admin-actions ">
                     <p:commandButton id="save" action="#{pacienteHome.guardarPaciente()}" value="#{messages['common.save']}" styleClass="btn primary offset4"/>
                     &nbsp;&nbsp;
-                    <h:link outcome="/pages/paciente/lista.xhtml?faces-redirect=true" 
+                    <h:link outcome="/pages/secretaria/lista.xhtml?faces-redirect=true" 
                             value="#{messages['common.cancel']}" styleClass="btn primary" >                         
                     </h:link>
                 </div>
