--- a/src/main/webapp/pages/home.xhtml
+++ b/src/main/webapp/pages/home.xhtml
@@ -81,8 +81,8 @@
             <h:panelGroup  rendered="#{identity.loggedIn}">
                 <h2>Bienvenidos al Softare Clínico de Gestión de Servicios de Salud </h2>
                 <br/>
-                <p:panel header="Módulo de Administración del Sistema" toggleable="true" >
-                    <h:link value="#{messages['module.BussinesEntity']}" rendered="#{true}" 
+                <p:panel header="Módulo de Administración del Sistema" toggleable="true" rendered="#{account.tienePermiso('ADMIN')}">
+                    <h:link value="#{messages['module.BussinesEntity']}" rendered="true" 
                             outcome="/pages/admin/bussinesentitytype/list">
                         <f:param name="result"></f:param>
                         <f:param name="typeName" value="edu.sgssalud.model.BussinesEntityType"></f:param>
@@ -92,6 +92,11 @@
                             outcome="/pages/admin/setting/list">
                         <f:param name="result"></f:param>
                         <f:param name="typeName" value="edu.sgssalud.model.config.Setting"></f:param>
+                    </h:link>
+                    <br />
+                    <h:link value="#{messages['servicioMedico.nombre']}" rendered="#{true}" 
+                            outcome="/pages/admin/serviciosMedicos/lista" >
+                        <f:param name="result"></f:param>                      
                     </h:link>
                     <br />               
                     <p:panel header="Administrar Perfiles de Usuario" toggleable="true" >
@@ -108,31 +113,44 @@
                     </p:panel>
                 </p:panel>
 
-                <p:panel header="#{messages['modulo.admin.secretaria']}" toggleable="true" >
+                <p:panel header="#{messages['modulo.admin.secretaria']}" toggleable="true" rendered="#{account.tienePermiso('SECRETARIA')}">
                     <h:link value="#{messages['paciente.admin']}" rendered="#{true}" 
-                            outcome="/pages/paciente/lista">                    
+                            outcome="/pages/secretaria/lista">                    
                     </h:link>
                     <br />                
                 </p:panel>
-                <p:panel header="#{messages['modulo.admin.Medicina']}" toggleable="true" toggleOrientation="vertical">
+                <p:panel header="#{messages['modulo.admin.Medicina']}" toggleable="true" toggleOrientation="vertical" rendered="#{account.tienePermiso('MEDICOS')}">
                     <h:link value="#{messages['historiasclinicas.admin']}" rendered="#{true}" 
-                            outcome="/pages/medicina/fichaMedica">                    
+                            outcome="/pages/depSalud/fichaMedica">                    
                     </h:link>
                     <br />  
                     <h:link value="#{messages['agendaMedica.admin']}" rendered="#{true}" 
-                            outcome="/pages/medicina/agenda">                    
+                            outcome="/pages/depSalud/medicina/agenda">                    
                     </h:link>
                 </p:panel>
-                <p:panel header="#{messages['modulo.admin.Odontologia']}" toggleable="true" toggleOrientation="vertical" >
+                <p:panel header="#{messages['modulo.admin.Odontologia']}" toggleable="true" toggleOrientation="vertical" rendered="#{account.tienePermiso('ODONTOLOGOS')}">
                     <h:link value="#{messages['fichaOdontologica.admin']}" rendered="#{true}" 
-                            outcome="/pages/odontologia/fichaOdontologica">                    
+                            outcome="/pages/depSalud/fichaMedica">                    
                     </h:link> 
                     <br />  
                     <h:link value="#{messages['agendaOdontologica.admin']}" rendered="#{true}" 
-                            outcome="/pages/odontologia/agenda">                    
+                            outcome="/pages/depSalud/odontologia/agenda">                    
                     </h:link>
                 </p:panel>
-                <p:panel header="#{messages['modulo.admin.LabClinico']}" toggleable="true" toggleOrientation="vertical" >
+                <p:panel header="#{messages['modulo.admin.enfermeria']}" toggleable="true" toggleOrientation="vertical" rendered="#{account.tienePermiso('ENFERMEROS')}">
+                    <h:link value="#{messages['historiasclinicas.admin']}" rendered="#{true}" 
+                            outcome="/pages/depSalud/fichaMedica">                    
+                    </h:link> 
+                    <br />  
+                    <h:link value="#{messages['curaciones']}" rendered="#{true}" 
+                            outcome="">                    
+                    </h:link>
+                    <br />  
+                     <h:link value="#{messages['inyecciones']}" rendered="#{true}" 
+                            outcome="">                    
+                    </h:link>
+                </p:panel>
+                <p:panel header="#{messages['modulo.admin.LabClinico']}" toggleable="true" toggleOrientation="vertical" rendered="#{account.tienePermiso('LABORATORISTAS')}">
                     <h:link value="#{messages['pedidoLabClinico.admin']}" rendered="#{true}" 
                             outcome="/pages/labClinico/pedidoExamen">                    
                     </h:link>
@@ -141,7 +159,7 @@
                             outcome="/pages/labClinico/examenes">                    
                     </h:link>                
                 </p:panel>
-                <p:panel header="#{messages['modulo.admin.farmacia']}" toggleable="true" toggleOrientation="vertical" >
+                <p:panel header="#{messages['modulo.admin.farmacia']}" toggleable="true" toggleOrientation="vertical" rendered="#{account.tienePermiso('FARMACEUTICOS')}">
                     <h:link value="#{messages['medicamento.admin']}" rendered="#{true}" 
                             outcome="/pages/farmacia/medicamento/lista">                    
                     </h:link> 
